@@ -11,6 +11,11 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-08-14
+2013-09-18 Andy Salnikov
+- allow constructor arguments with dest=none, implementation of a constructor
+  should be provided separately
+
 Tag: V00-08-13
 2013-09-18 Andy Salnikov
 - allow generation of _sizeof() for few additional types
